--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 .mailmap export-ignore
+*.c linguist-language=C
+*.cpp linguist-language=C++
